2006-05-01  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_form_let): named-let construct

2006-04-23  Ales Hakl  <ales at hakl dot net>

	* src/stream.c (tokenizer_process): create true object from cache

	* src/dfsch.c: Removed static declaration of ascii_strcasecmp

	* src/stream.c (tokenizer_process): Special case for unreadable objects

	* src/number.c (dfsch_make_number_from_string): At least some
	support for non-decimal numbers

	* src/stream.c (tokenizer_process): support for boolean and
	character escapes
	(tokenizer_process): case insensitive character names
	(dispatch_atom): Signal error on invalid number

2006-04-22  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: tail escape descriptor should (probably) be
	declared volatile

	* src/strings.c: rename utf8-substring to substring-utf8
	Removed debugging code
	Fixed some warnings

2006-04-19  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (string_write): Better string escaping.
	(dfsch_list_2_string_utf8): list->string-utf8 function
	(utf8_ref_cb): Fixed.

2006-04-18  Ales Hakl  <ales at hakl dot net>

	* src/strings.c: Escape all characters < 32, list->string function

2006-04-17  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_2_list): string->list function
	(dfsch_string_utf8_2_list): string-utf8->list function

	* src/dfsch.c (string_hash): Slightly simplified
	(lookup_symbol): Faster and locale independent lookup

2006-04-16  Ales Hakl  <ales at hakl dot net>

	* doc/dfsch-repl.1: manpage for dfsch-repl
	Correct formating of SEE ALSO section

2006-04-15  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (interactive_repl): non-readline REPL

	* src/load.c (dfsch_read_scm_stream): last character is
	strlen()-1, strlen() is final NUL

	* src/native.c (native_id): return unique id (memory address) of
	given object

	* configure.ac: Correct handling of arguments (autoconf is magic)

2006-04-09  Ales Hakl  <ales at hakl dot net>
