@@ -13,7 +13,8 @@ EXTRA_DIST = scm/morse.scm tests/scm-test.sh scm/test.scm doc/dfsch-repl.1
 
 libdfsch_la_SOURCES = src/dfsch.c dfsch/dfsch.h src/object.h src/internal.h\
 	src/stream.c dfsch/stream.h \
-	src/native.c\
+	src/native.c \
+	src/control.c \
 	src/util.c src/util.h \
 	src/hash.c dfsch/hash.h \
 	src/promise.c dfsch/promise.h \
