@@ -3,7 +3,8 @@
 
 #include <dfsch/dfsch.h>
 
-extern dfsch_object_t* dfsch_native_register(dfsch_ctx_t *ctx);
+extern void dfsch__native_register(dfsch_ctx_t *ctx);
+extern void dfsch__control_register(dfsch_ctx_t *ctx);
 extern int dfsch__number_eqv_p(dfsch_object_t* a, dfsch_object_t* b); 
 extern void dfsch__hash_native_register(dfsch_ctx_t *ctx);
 extern void dfsch__promise_native_register(dfsch_ctx_t *ctx);
