@@ -1,5 +1,8 @@
 2006-05-01  Ales Hakl  <ales at hakl dot net>
 
+	* src/control.c (dfsch__control_register): split native.c to
+	native and control.
+
 	* src/native.c (native_form_let): named-let construct
 
 2006-04-23  Ales Hakl  <ales at hakl dot net>
